Changelog
=========

5.3-dev - (unreleased)
----------------------
* Bug fix: Updated socialmedia.pt template for Chameleon compatibility
[olimpiurob refs #22310]

5.2 - (2014-06-06)
------------------
* Change: table-document-actions class now spans to 100% instead of having
  a hardcoded value
  [ichimdav refs #19536]

5.1 - (2013-10-07)
------------------
* Change: Added the notoc class in order to remove the Share with others 
  header from the EEA TOC 
  [ichimdav refs #16929]

5.0 - (2013-08-09)
------------------
* Bug fix: Fixed missing translations in templates.
  [prospchr refs #15572]

4.9 - (2013-04-17)
------------------
* Bug fix: fixed HISTORY.txt RST markup
  [ghicaale refs #14321]

4.8 - (2013-04-17)
------------------
* Bug fix: fixed css selectors for the social buttons.
  [ghicaale refs #14198]

4.7 - (2013-03-19)
------------------
* Bug fix: Fixed the reference for local variable in create_locale.
  [prospchr fixes #14176]

4.6 - (2013-03-15)
------------------
* Bug fix: removed unnecessary spaces and tabs
  [ghicaale refs #13990]
* Bug fix: Changed the social buttons to load asynchronously on the pages.
  Now, the page shows an image which is activated by passing the mouse hover
  it.
  [prospchr fixes #13990]
* Upgrade step:
   1. ZMI->portal_quickinstaller
   2. Reinstall eea.socialmedia
* Bug fix: Uploaded the socialite.min.js instead of socialite.js
* Bug fix: Social media buttins are multilingual now.
  [prospchr fixes #13990]

4.5 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n:domain in .pt
  [prospchr refs #5162]

4.4 - (2012-06-13)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: fixed position of right align for documentActions
  [ichimdav #5150]
* Bug fix: Fix translation errors in eea.socialmedia
  [prospchr fixes #5159]

4.3 - (2012-04-27)
------------------
* Bug fix: Change the FB like button to appear in english
  [prospchr refs #5094]