@@ -26,6 +26,7 @@
 
     <browser:viewlet
         name="eea.socialmedia"
+        layer="eea.socialmedia.interfaces.ISocialMediaLayer"
         manager="plone.app.layout.viewlets.interfaces.IBelowContentBody"
         class=".viewlets.SocialMediaViewlet"
         permission="zope2.View"
