@@ -1,0 +1,8 @@
+""" Browser interfaces
+"""
+from zope.interface import Interface
+
+
+class ISocialMediaLayer(Interface):
+    """ Custom layer for this package
+    """
