@@ -1,0 +1,8 @@
+""" Public interfaces
+"""
+# Browser layer
+from eea.socialmedia.browser.interfaces import ISocialMediaLayer
+
+__all__ = [
+    ISocialMediaLayer.__name__,
+]
