@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<layers>
+  <layer name="eea.socialmedia.layer"
+    interface="eea.socialmedia.interfaces.ISocialMediaLayer" />
+</layers>
