@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
  <description>eea.socialmedia profile</description>
- <version>4.1</version>
+ <version>4.2</version>
 </metadata>
