@@ -4,6 +4,18 @@
   i18n_domain="eea">
 
   <genericsetup:upgradeSteps
+    source="4.1"
+    destination="4.2"
+    profile="eea.socialmedia:default">
+
+    <genericsetup:upgradeDepends
+      title="Import browserlayer"
+      import_steps="browserlayer"
+      />
+
+  </genericsetup:upgradeSteps>
+
+  <genericsetup:upgradeSteps
     source="*"
     destination="4.1"
     profile="eea.socialmedia:default">
